--- a/src/Components/views/Section_3_2.css
+++ b/src/Components/views/Section_3_2.css
@@ -1,6 +1,6 @@
 /* ------------------          expertiseFlexItems    >>>      ------------------- */
 .ai_1 {
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   /* margin-left: 90px !important ; */
 }
 .expertiseFlexItems_ai {
