--- a/src/Components/views/section_1.css
+++ b/src/Components/views/section_1.css
@@ -2,7 +2,7 @@
   font-size: 17px !important;
   line-height: 50px !important;
   /* letter-spacing: 1px; */
-  color: var(--color1);
+  color: #001415;
   margin-top: 50px;
   margin-bottom: 50px;
 }
@@ -110,8 +110,7 @@
 /*   --------------------      boton   \/   -------------------------------- */
 
 .email-button {
-  /* background: linear-gradient(to right, var(--color4), var(--color5));  */
-  background-color: var(--color1);
+  background-color:#001415;
   color: var(--white) !important;
   padding: 14px 5vw;
   text-decoration: none;
@@ -127,7 +126,7 @@
   transition: "background-color color 0.3s ease";
   font-weight: bolder !important;
 
-  background-color: var(--color1);
+  background-color: #001415;
   color: var(--white) !important;
 }
 /*   --------------------      boton   /\   -------------------------------- */
