--- a/src/Components/views/Hero.css
+++ b/src/Components/views/Hero.css
@@ -14,7 +14,7 @@
   background-position: center;
   transform: rotate(-3deg);
   height: 100vh;
-  width: 90%;
+  width: 94%;
   margin-left: 55px;
   border-radius: 30px 2px;
   margin-bottom: 3rem;
@@ -66,8 +66,12 @@
   font-weight: 400;
   padding: 1rem;
 }
+
+/* -------------------          Subtitulos en Hero section        ------------------------ */
 .hablity_agriculturalengineer {
-  background: linear-gradient(to right, white 10%, #0102205f 60%, #010220 100%);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.412) 10%, #0102205f 60%, #010220 100%);
+  color: #010220;
+
   margin-left: 1rem;
   padding-left: 14vw;
   margin-right: -1vw;
@@ -76,7 +80,6 @@
 
 .hablity_ai_agent_creator {
   margin: 20px 0;
-  /* background: linear-gradient(to left, rgb(255, 255, 255),#010220, #010220); */
   background-size: cover;
   background-position: center;
   margin-right: 2rem;
@@ -84,16 +87,16 @@
   padding-left: 15vw;
   border-radius: 2px 30px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
-  color: white;
+  color: rgba(255, 255, 255, 0.534);
 }
 
 .hablity_web_developer {
   margin-left: -1rem;
-  background: linear-gradient(to right, rgb(255, 255, 255), #0a014e);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.477), #05002ce4);
   box-shadow: 0 4px 8px rgba(242, 243, 249, 0.5);
-
   padding-left: 24vw;
   border-radius: 30px 2px;
+  color: #010220;
 }
 
 /* Estilos responsivos */
