--- a/src/index.css
+++ b/src/index.css
@@ -704,8 +704,8 @@ h5 {
 }
 
 .lets-talk-flexItem h2 {
-  color: #010220;
-  font-size: 100px;
+  color: #01022d;
+  font-size: 99px;
   margin: 0;
   margin-top: 10vw;
   line-height: 1;
