--- a/src/Components/views/section_3_1.css
+++ b/src/Components/views/section_3_1.css
@@ -267,3 +267,91 @@ p {
     font-size: 33px;
   }
 }
+
+
+/* ------------------                  Section 2                ---------------------- */
+
+/* ------------------          expertiseFlexItems    >>>      ------------------- */
+
+.expertiseFlexItems_ai {
+    box-sizing: border-box;
+    height: fit-content;
+  }
+  
+  .expertiseFlexItems_ai p {
+    font-size: 18px !important;
+    line-height: 160%;
+    color: var(--color1);
+    letter-spacing: 1.5px;
+  }
+  .expertiseFlexItems_ai li {
+    font-size: 13px !important;
+    line-height: 160%;
+    color: var(--color1);
+    letter-spacing: 1.1px;
+    padding: 20px;
+    border-radius: 1px 10px;
+    margin-top: 10px;
+  }
+  
+  /* ------------------      <<<     expertiseFlexItems          --------------------- */
+  
+  @media (width <= 768px) {
+    .expertiseFlexItems_ai {
+      justify-content: center;
+      width: auto;
+      margin: 0 !important;
+      padding: 10px !important;
+    }
+  }
+  
+  @media (width <= 552px) {
+    .expertiseFlexItems_ai li {
+      width: 100% !important;
+      padding: 0 !important;
+      letter-spacing: 0.9px !important;
+    }
+  }
+  @media (width <= 450px) {
+  }
+  
+  .bckimg {
+    position: relative; 
+    background-size: cover;
+    background-position: center;
+  }
+  
+  .bckimg::before {
+    /* Create a pseudo-element for the hover image */
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    opacity: 0; /* Start fully transparent */
+    transition: opacity 0.5s ease-in-out; /* Smooth transition for opacity */
+    border-radius: 1px 30px;
+  }
+  .ai1::before {
+    background-image: url("/ai1.jpg");
+  }
+  .ai2::before {
+    background-image: url("/ai2.jpg");
+  }
+  .ai3::before {
+    background-image: url("/ai3.jpg");
+  }
+  .ai4::before {
+    background-image: url("/rain.jpg");
+  }
+  .ai5::before {
+    background-image: url("/ai5.jpg");
+  }
+  
+  .bckimg:hover::before {
+    opacity: 0.15; 
+  }
+  
