--- a/src/Components/views/Section_2.css
+++ b/src/Components/views/Section_2.css
@@ -1,5 +1,5 @@
 .padre_sliders {
-  rotate: -3deg;
+  /* rotate: -3deg; */
   background-color: #001a27;
   padding-top: 14rem;
   margin-top: 18rem;
