--- a/src/index.css
+++ b/src/index.css
@@ -46,10 +46,9 @@ body {
   width: 100% ;
   margin: 0 ;
   padding: 0 ;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  overflow-x: hidden ;
+  /* overflow-x: hidden ; */
 }
 .padre{
 }
@@ -133,14 +132,17 @@ h5 {
 
 @media screen and (min-width: 768px) and (max-width: 1940px) {
   .container {
-    margin-left: 112px !important;
-    margin-right: 112px !important;
+    /* margin-left: 112px !important; */
+    /* margin-right: 112px !important; */
     /* width: calc(100% - 224px) !important;  */
+    background-color: yellow;
   }
   .containerLarge {
     margin-left: 56px;
     margin-right: 56px;
     padding: 56px;
+    /* background-color: green; */
+
   }
 
   .navbarContainerLarge {
