--- a/src/Components/views/Section_3_3_dev.css
+++ b/src/Components/views/Section_3_3_dev.css
@@ -1,18 +1,29 @@
 .sectionDev{
-    background-color: #001a27;
+    margin-top: 10vw;
+    background-color:  #001a27;
     padding-top: 5vw;
     padding-bottom: 10vw;
-    border: 10px solid transparent; /* Añadir borde */
+    border-top: 1px solid  #001a27; 
     border-radius: 0 100px  0 100px  ; 
 
 }
 .devHeader{
     margin-bottom: 55px ;
     margin-top: 35px;
-    font-size: 49px;
-    color: white;
+    font-size: 59px;
+    color:#ffffff;
     /* background-color: aquamarine; */
 }
 .expertiseFlexItems_dev li{
     color: white;
 }
+
+.bkc3_subtitle {
+    background: linear-gradient(
+      to right,
+      #020331,
+      #062939,
+      #0b3c53,
+      var(--color1)
+    );
+  }
