--- a/src/Components/views/section_3_2.css
+++ b/src/Components/views/section_3_2.css
@@ -16,3 +16,12 @@
 .expertiseFlexItems_ai li{
     color: white;
 }
+
+.bkc2_subtitle {
+    background: linear-gradient(
+      to right,
+      #001415 0%,
+      #001415 60%,
+      #002a2dd4 100%
+    );
+  }
