--- a/src/Components/views/Section_2.css
+++ b/src/Components/views/Section_2.css
@@ -1,6 +1,6 @@
 .padre_sliders {
     margin-right: 30px;
-  /* rotate: -3deg; */
+  rotate: -3deg;
   /* background-color: #001a27; */
   padding-top: 14rem;
   margin-top: 11rem;
