--- a/src/Components/views/Section_4.css
+++ b/src/Components/views/Section_4.css
@@ -5,7 +5,7 @@
 }
 
 h3 {
-  transform: rotate(4deg);
+  /* transform: rotate(4deg); */
   color: var(--white) !important;
 }
 #projects {
@@ -17,14 +17,14 @@ h3 {
   border-radius: 30px 2px;
 }
 .section_projects {
-  padding-top: 7rem;
+  padding-top: 8rem;
   position: relative;
-  transform: rotate(-4deg);
+  /* transform: rotate(-4deg); */
   border-radius: 10px;
 }
 
 .sliderContainer {
-  transform: rotate(4deg);
+  /* transform: rotate(4deg); */
 
   position: relative;
   margin: 8rem 10px 8rem 10px;
@@ -76,9 +76,12 @@ h3 {
   .sliderDiv:hover {
     width: 82%;
   }
+  .section_projects {
+    padding-top: 3rem;
+  }
   h3 {
     margin-left: calc(15vw - 20px);
-    transform: rotate(4deg);
+    /* transform: rotate(4deg); */
     font-size:34px !important ;
   }
 }
