--- a/src/Components/views/section_3_3.css
+++ b/src/Components/views/section_3_3.css
@@ -15,7 +15,10 @@
     /* background-color: aquamarine; */
 }
 .expertiseFlexItems_dev li{
-    color: white;
+    color: rgb(250, 250, 250);
+    line-height: 28px;
+    margin-bottom: 31px;
+    letter-spacing: 0.5px;
 }
 
 .bkc3_subtitle {
