--- a/src/Components/views/Section_4.css
+++ b/src/Components/views/Section_4.css
@@ -6,32 +6,44 @@
 
 h3 {
   /* transform: rotate(4deg); */
-  color: var(--white) !important;
+  color: white !important;
+  font-size: 48px !important;
+  font-weight: 300 !important;
 }
 #projects {
   margin-top: 12vw;
   background-color: var(--color1);
-  background: linear-gradient(to bottom, #001a27, var(--color1));
-
+  /* background: linear-gradient(to bottom, #001a27, var(--color1)); */
   width: 99vw;
   border-radius: 30px 2px;
+  border: #2a353b19 solid 1px;
+
+  background-image: 
+  linear-gradient(0deg, rgba(120, 110, 110, 0.163) 1px, transparent 1px),
+  linear-gradient(90deg, rgba(120, 110, 110, 0.163) 1px, transparent 1px);
+background-size: 60px 60px;
+  
 }
 .section_projects {
   padding-top: 8rem;
   position: relative;
-  /* transform: rotate(-4deg); */
   border-radius: 10px;
+
+  /* background-image: 
+  linear-gradient(0deg, rgba(255, 255, 255, 0.1) 1px, transparent 1px),
+  linear-gradient(90deg, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
+background-size: 60px 60px; */
 }
 
 .sliderContainer {
-  /* transform: rotate(4deg); */
-
   position: relative;
   margin: 8rem 10px 8rem 10px;
   width: 100%;
   height: 600px;
   display: flex;
   justify-content: center;
+
+  
 }
 
 .sliderDiv {
@@ -48,13 +60,14 @@ h3 {
   width: 100%;
   height: 100%;
   opacity: 0.97;
-  border-radius: 3px; /* Añadido: radio de borde de 10px */
+  border-radius: 3px; 
+  border: solid 1px #ffffff;
 }
 
 .sliderDiv:hover {
   width: 30%;
   opacity: 1;
-  border: var(--white) 10px 2px 3px 10px solid;
+  /* border: #001a27 10px 2px 3px 10px solid; */
 }
 
 @media (width <= 768px) {
