--- a/src/Components/views/section_3_2.css
+++ b/src/Components/views/section_3_2.css
@@ -4,7 +4,10 @@
     padding-bottom: 10vw;
     border: 10px solid transparent; /* Añadir borde */
     border-radius: 0 100px  0 100px  ; 
-
+    background-image: 
+    linear-gradient(0deg, rgba(255, 255, 255, 0.1) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
+background-size: 60px 60px;
 }
 .aiHeader{
     margin-bottom: 55px ;
