--- a/src/index.css
+++ b/src/index.css
@@ -850,7 +850,7 @@ section div {
 
 .footer {
   position: relative;
-  background-color: #010220;
+  background-color: #001a27;
   color: rgb(255, 255, 255) !important;
   padding: 20px 0 !important;
   display: block !important; /* Asegura que el footer se muestre */
