--- a/src/Components/views/Hero.css
+++ b/src/Components/views/Hero.css
@@ -42,14 +42,14 @@
 
 .presentacion {
   padding-left: 4rem;
-  padding-right: -8rem;
+  /* padding-right: -8rem; */
   margin-bottom: 3rem !important;
   /* background-color:  greenyellow; */
 }
 .mi_nombre {
   font-size: 3rem;
   color: var(--white);
-  font-weight: 300;
+  font-weight: 400;
   letter-spacing: 0.2rem;
   display: flex;
   flex-direction: column;
@@ -73,13 +73,14 @@
 
 /* -------------------          Subtitulos en Hero section        ------------------------ */
 .hablity_agriculturalengineer {
-  background: linear-gradient(to right, rgba(255, 255, 255, 0.412) 10%, #0102205f 60%, #010220 100%);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.412) 10%, #0102205f 80%, #010220 100%);
   color: #010220;
 
   margin-left: 1rem;
   padding-left: 14vw;
-  margin-right: -1vw;
+  /* margin-right: -1vw; */
   border-radius: 30px 2px;
+  width: 50%;
 }
 
 .hablity_ai_agent_creator {
@@ -91,11 +92,13 @@
   padding-left: 15vw;
   border-radius: 2px 30px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
-  color: rgba(255, 255, 255, 0.534);
+  color: rgba(255, 255, 255, 0.722);
 }
 
 .hablity_web_developer {
-  margin-left: -1rem;
+  margin-right: 2rem;
+  margin-left: 5rem;
+  margin-bottom: 5rem;
   background: linear-gradient(to right, rgba(255, 255, 255, 0.477), #05002ce4);
   box-shadow: 0 4px 8px rgba(242, 243, 249, 0.5);
   padding-left: 24vw;
@@ -120,13 +123,17 @@
   }
 
   .mi_nombre {
-    font-size: 2rem;
+    font-weight: 400;
+    font-size: 2.5rem;
+
   }
 
   .skill {
-    font-size: 1.2rem;
-    color: var(--color1);
+    font-size: 1rem;
+    color: white;
     font-weight: 400;
     padding: 1rem;
   }
+  .hablity_web_developer {
+    margin-bottom: 1rem;}
 }
