--- a/src/navbar.css
+++ b/src/navbar.css
@@ -5,7 +5,7 @@
   width: 100%;
   max-width: 640px;
   height: 62px;
-  background-color: #01213179 !important;
+  background-color:  #001a27 !important;
 }
 
 /* Estilos para el contenedor de botones */
