--- a/src/Components/views/Section_4.css
+++ b/src/Components/views/Section_4.css
@@ -12,7 +12,7 @@ h3 {
 }
 #projects {
   margin-top: 12vw;
-  background-color: var(--color1);
+  background-color:  #001a27;
   /* background: linear-gradient(to bottom, #001a27, var(--color1)); */
   width: 99vw;
   border-radius: 30px 2px;
