--- a/src/navbar.css
+++ b/src/navbar.css
@@ -4,8 +4,10 @@
 .custom-app-bar {
   width: 100%;
   max-width: 640px;
-  height: 62px;
-  background-color:  #001a27 !important;
+  height: 52px;
+  background-color:  #0a001b !important;
+  box-shadow: 0 1px 3px rgb(255, 255, 255) !important; 
+
 }
 
 /* Estilos para el contenedor de botones */
