--- a/src/Components/views/section_3_3.css
+++ b/src/Components/views/section_3_3.css
@@ -1,11 +1,11 @@
 .sectionDev{
     margin-top: 10vw;
-    background-color:   #001a27;
+    background-color:   #0a001b;
     /* background-color:  #04aafd; */
-    background-image: 
+    /* background-image: 
         linear-gradient(0deg, rgba(255, 255, 255, 0.1) 1px, transparent 1px),
         linear-gradient(90deg, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
-    background-size: 60px 60px;
+    background-size: 60px 60px; */
 
     padding-top: 5vw;
     padding-bottom: 10vw;
@@ -30,9 +30,10 @@
 .bkc3_subtitle {
     background: linear-gradient(
       to right,
-      #020331,
-      #062939,
-      #0b3c53,
-      var(--color1)
+      /* #020331, */
+      #160214,
+      #1c0019 60%,
+      #d9d9d9 100%
+      /* var(--color1) */
     );
   }
