--- a/src/navbar.css
+++ b/src/navbar.css
@@ -7,7 +7,7 @@
   height: 52px;
   background-color:  #0a001b !important;
   box-shadow: 0 1px 3px rgb(255, 255, 255) !important; 
-
+  z-index: 10000 !important;
 }
 
 /* Estilos para el contenedor de botones */
