--- a/src/Components/views/section_3_2.css
+++ b/src/Components/views/section_3_2.css
@@ -20,7 +20,7 @@
 .bkc2_subtitle {
     background: linear-gradient(
       to right,
-      #001314 0%,
+      #100114ec 0%,
       #001415ec 60%,
       #d9d9d9 100%
     );
