--- a/src/pastoreo/pastoreo_presicion.css
+++ b/src/pastoreo/pastoreo_presicion.css
@@ -1,3 +1,32 @@
 h3{
     margin-top: 0;
 }
+h4{
+    font-size: x-large;
+    font-weight: 350;
+}
+.textPersonalSection{
+    background-color: rgba(92, 67, 12, 0.082);
+    padding: 20px;
+    padding-left: 80px;
+    padding-right: 80px;
+
+    /* border: 1px solid rgba(30, 3, 104, 0.37); */
+    border-radius: 5px;
+    /* margin-top: 0 !important; */
+}
+
+.personalPresentation{
+    /* background-color: rgb(14, 236, 236); */
+    margin-top: 90px ;
+    margin-bottom: 30px ;
+
+}
+.Section1Home1{
+    /* background-color: burlywood; */
+}
+.helloText{
+    line-height: 39px !important;
+    /* margin-top: 16px !important; */
+    /* margin-bottom: 25px ; */
+}
