--- a/src/Components/views/Section_4.css
+++ b/src/Components/views/Section_4.css
@@ -4,11 +4,11 @@
   }
 }
 
-h3 {
+/* h3 {
   color: #0a001b !important;
   font-size: 48px !important;
   font-weight: 300 !important;
-}
+} */
 #projects {
   margin-top: 12vw;
   /* background-color: #0a001b; */
