--- a/src/index.css
+++ b/src/index.css
@@ -56,10 +56,10 @@ h1 {
   font-weight: 300; /* Reducimos el grosor de la letra */
 }
 
-h3 {
+/* h3 {
   font-size: 44px;
   line-height: 120%;
-}
+} */
 
 h5 {
   margin: 0;
@@ -668,10 +668,10 @@ h5 {
   line-height: 110%;
 }
 
-.testimonial-content {
+/* .testimonial-content {
   font-size: 48px;
   line-height: 130%;
-}
+} */
 
 .autor h6 {
   margin-bottom: 0.5rem;
