--- a/src/Components/views/homeNuevo.css
+++ b/src/Components/views/homeNuevo.css
@@ -22,6 +22,16 @@ html {
   scroll-behavior: smooth;
 }
 
+/** Palette de colores reutilizables */
+:root {
+  --color-blue-dark: rgb(37, 53, 68);
+  --color-teal: #328c87;
+  --color-wheat: #b48954;
+  --color-cream: #cdbcac;
+  --color-blue-mid: #2274a5;
+}
+
+
 /* ===========================================
    NAVBAR TRANSPARENTE HORIZONTAL
 =========================================== */
@@ -475,7 +485,7 @@ html {
 }
 
 .section-maps1 {
-  background-image: url('/maps1.jpg');
+  background-image: linear-gradient(hsl(209, 30%, 21% , 0.566), hsl(209, 30%, 21% , 0.3)), url('/maps1.jpg');
   background-size: cover;
   background-position: center;
 }
@@ -511,6 +521,7 @@ html {
 
 .section-spring {  
   background-image: url('/spring.jpg');
+  /* background-image: url('/spring2.png'); */
   background-size: cover;
   background-position: center;
 }
@@ -586,7 +597,9 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('/surf.jpg') no-repeat center center;
+  background: 
+    linear-gradient(rgba(37, 53, 68, 0.57), rgba(37, 53, 68, 0.52)), 
+    url('/surf.jpg') no-repeat center center;
   background-size: cover;
   z-index: 10;
   pointer-events: none;
