--- a/src/Components/views/homeNuevo.css
+++ b/src/Components/views/homeNuevo.css
@@ -419,7 +419,7 @@ html {
 /*============================================================================================================  */
 
 .titulopasturas h2 {
-  text-align: center;
+  text-align: start;
   font-size: 2.5em;
   font-weight: 200;
   letter-spacing: 0.1em;
@@ -427,6 +427,7 @@ html {
   text-shadow: 0 4px 16px rgba(0, 0, 0, 0.85);
   margin-top: 100px;
   margin-bottom: 60px;
+  padding-left: 200px;
 
 }
 
@@ -441,41 +442,45 @@ html {
 
 .fields1 {
   display: flex;
-  justify-content: center;
+  /* flex-direction: row-reverse; */
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
-  /* height: 80vh; */
-  gap: 50px;
-  /* padding-top: 220px; */
+  gap: 30px;
   padding-bottom: 50px;
   padding-left: 80px;
   padding-right: 80px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.fields1-image-container {
+  width: 40%;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .fields1 img {
-  width: 300px;
+  width: 100%;
+  max-width: 300px;
   height: auto;
   object-fit: contain;
-  max-width: 100%;
   display: block;
-}
-
-.fields1-image-container1 {
-  width: 300px;
-  height: auto;
-  object-fit: contain;
-  max-width: 100%;
-  display: block;
-  padding-left: 80px;
-  padding-right: 80px;
   opacity: 0.9;
 }
 
 .texto {
-  font-size: 0.6rem;
-  min-width: 450px;
+  width: 40%;
+  flex-shrink: 0;
+  font-size: 0.8rem !important;
   font-weight: 300;
   letter-spacing: 0.12em;
   text-shadow: 0 4px 16px rgba(0, 0, 0, 0.85);
+  box-sizing: border-box;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 /*============================================================================================================  */
